[gd_scene load_steps=2 format=3 uid="uid://d3fyx8psdeiew"]

[ext_resource type="Script" path="res://Scripts/simple_minigame.gd" id="1_t8lu4"]

[node name="SimpleMinigame" type="CanvasLayer"]
script = ExtResource("1_t8lu4")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(400, 200)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="InstructionLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "กด SPACE เพื่อช่วยยาย"
horizontal_alignment = 1

[node name="ProgressLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "ช่วยยายเขียนจดหมาย"
horizontal_alignment = 1

[node name="PressCountLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "กดไปแล้ว: 0/3 ครั้ง"
horizontal_alignment = 1
